Move options from field def to field ctx
