# server/src/field-definition/field-definition.controller.ts
@@ -41,9 +41,4 @@ export class FieldDefinitionController {
   ) {
     return this.fieldDefinitionService.update(id, updateFieldDefinitionDto);
   }
-
-  @Get(':fieldDefId/options')
-  findOptionsByFieldDefId(@Param('fieldDefId') fieldDefId: string) {
-    return this.fieldDefinitionService.findOptionsByFieldDefId(fieldDefId);
-  }
 }
